@@ -47,6 +47,7 @@ Bugfixes:
  - GBA: Fix calls to endian-independent loadstores
  - GBA Video: Fix windows not affecting sprites
  - VFS: Fix line-reading to return proper values
+ - GBA Memory: Fix load/store multiple video memory waitstates
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
